Changes from jTDS 1.2
=====================

11/25/2005 - Alin Sinpalean
 o Removed duplicate entries from Charsets.properties.

11/23/2005 - Alin Sinpalean
 o Made a few modifications to the test suite to accomodate changes in SQL
   Server 2005.

11/09/2005 - Alin Sinpalean
 o Corrected bug [1351891] Using JtdsCallableStatement.setFloat causes
   SQLException. findParameter() was called as if to retrieve parameter values
   from the setByte(), setDouble() and setFloat() methods, which caused the
   parameter not to be found.

===============================================================================
10/08/2005 - jTDS 1.2 released
===============================================================================

Changes from jTDS 1.1
=====================

11/03/2005 - Alin Sinpalean
 o Applied Mike's fix for bug [1346086] Problem with DATABASE name change on
   Sybase.
 o Applied patch [1250393] modify getJdbcType() to handle subclass of basic
   JDBC types, submitted by  Joel Schneider (cognophile).
 o Corrected a minor DatabaseMetaData error: supportsTransactionIsolationLevel
   returned true for TRANSACTION_NONE or any invalid value.

10/31/2005 - Alin Sinpalean
 o Corrected bug in JtdsDatabaseMetaData.getBestRowIdentifier(). Statement was
   closed, causing errors when using the returned result set.

10/27/2005 - Mike Hutchinson
 o Fixed bug "[1305275] Cursor opens fails when cursor threshold <> -1" by
   amending MSCursorResultSet.
 o Fixed bugs "[1283472] Unable to cancel statement with cursor resultset" and
   "[1323363] Deadlock Exception not reported (SQL Server)" by amending
   JtdsStatement executeSQL() and executeSQLQuery().
 o Fixed a bug in handling output parameters that occurs when invoking remote
   stored procedures. The TdsCore.tdsOutputParamToken method was amended.
 o Implement RFE "[1289687] configurable socket setSoTimeout()". This also
   offers a solution to bug "[1297306] Network problem can cause jTDS hang-up".